hphp/test/zend/good/tests-classes/autoload_010.php.exp
In autoload: string(6) "UndefI"
HipHop Fatal error: Undefined interface: UndefI in hphp/test/zend/good/tests-classes/autoload_010.php on line 8
