hphp/test/zend/good/tests-classes/autoload_010.php
<?php
  function __autoload($name)
  {
      echo "In autoload: ";
      var_dump($name);
  }
  
  class C implements UndefI
  {
  }
?>